--- a/index.html
+++ b/index.html
@@ -1,70 +1,99 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>프로젝트1</title>
-  <link rel="stylesheet" href="./style/main.css">
+  <title>Document</title>
+  <link rel="stylesheet" href="reset.css">
   <style>
-    * {
+    *{
       margin: 0;
       padding: 0;
     }
-
-    body {
-      width: 1920px;
-      height: 1120px;
-      display: flex;
-      background: yellow;
+    .wrap{
+      width: 1880px;
     }
-
-    .df {
-      display: flex;
-    }
-
-    div {
+    div{
+      width: 1280px;
       border: 1px solid;
       padding: 10px;
-      width: 100%;
     }
-
-    div.item.a {
-      background: blue;
-      width: 100%;
-      height: 48px;
-      margin: 0;
-      padding: 0;
+    .header{
+      width: 768px;
     }
-
-    div.item.b {
-      background: white;
-      position: relative;
+    .df{
+      display: flex;
     }
-
-    div.item.f {
-      background: #444;
-      width: 1920px;
-      height: 140px;
+    .topinside{
+      margin: 10px;
+    }
+    .df .top button{
+      margin: 5px;
+    }
+    main{
+      width: 768px;
+    }
+    div.df.home{
+      display: flex;
+      width: 1024px;
+      padding: 44px;
+    }
+    div.item{
+      width: 768px;
+      padding: 40px;
     }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <header>
-      <div class="item a"></div>
-      <div class="item a"></div>
+      <div class="df">
+      <div class="df logo">
+        <img src="" alt="">
+        <p></p>
+      </div>
+      <div class="gnb">
+        <ul class="df top">
+        <li class="topinside">Home</li>
+        <li class="topinside">Service</li>
+        <li class="topinside">Feature</li>
+        <li class="topinside">Product</li>
+        <li class="topinside">Testimonial</li>
+        </ul>
+      </div>
+      <div class="df top button">
+        <button class="whitefont">Login</button>
+        <button class="bgfont">Sign up</button>
+      </div>
+      </div>
     </header>
     <main>
-      <div class="item b"></div>
-      <div class="item c"></div>
+      <div class="container">
+        <div class="df Home">
+          <div class="Home md1">
+            <h1>Lessons and insights</h1>
+            <p>from 8 years</p>
+            <p>Where to grow your business as a photographer: site or social media?</p>
+            <button class="Register"></button>
+          </div>
+          <div class="item">
+            <img src="" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="home">
+        <div>
+          <div>
+            <h1>Our Clients</h1>
+            <p>We have been working with some Fortune 500+ clients</p>
+          </div>
+        </div>
+      </div>
+      <div class="item"></div>
     </main>
     <footer>
-      <div class="item f"></div>
+      <div class="item"></div>
     </footer>
   </div>
 </body>
-
 </html>
