--- a/proj.html
+++ b/proj.html
@@ -1,99 +1,70 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="reset.css">
+  <title>프로젝트1</title>
+  <link rel="stylesheet" href="./style/main.css">
   <style>
-    *{
+    * {
       margin: 0;
       padding: 0;
     }
-    .wrap{
-      width: 100%;
+
+    body {
+      width: 1920px;
+      height: 1120px;
+      display: flex;
+      background: yellow;
     }
-    div{
-      width: 1280px;
+
+    .df {
+      display: flex;
+    }
+
+    div {
       border: 1px solid;
       padding: 10px;
+      width: 100%;
     }
-    .header{
-      width: 768px;
+
+    div.item.a {
+      background: blue;
+      width: 100%;
+      height: 48px;
+      margin: 0;
+      padding: 0;
     }
-    .df{
-      display: flex;
+
+    div.item.b {
+      background: white;
+      position: relative;
     }
-    .topinside{
-      margin: 10px;
-    }
-    .df .top button{
-      margin: 5px;
-    }
-    main{
-      width: 768px;
-    }
-    div.df.home{
-      display: flex;
-      width: 1024px;
-      padding: 44px;
-    }
-    div.item{
-      width: 768px;
-      padding: 40px;
+
+    div.item.f {
+      background: #444;
+      width: 1920px;
+      height: 140px;
     }
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <header>
-      <div class="df">
-      <div class="df logo">
-        <img src="" alt="">
-        <p></p>
-      </div>
-      <div class="gnb">
-        <ul class="df top">
-        <li class="topinside">Home</li>
-        <li class="topinside">Service</li>
-        <li class="topinside">Feature</li>
-        <li class="topinside">Product</li>
-        <li class="topinside">Testimonial</li>
-        </ul>
-      </div>
-      <div class="df top button">
-        <button class="whitefont">Login</button>
-        <button class="bgfont">Sign up</button>
-      </div>
-      </div>
+      <div class="item a"></div>
+      <div class="item a"></div>
     </header>
     <main>
-      <div class="container">
-        <div class="df Home">
-          <div class="Home md1">
-            <h1>Lessons and insights</h1>
-            <p>from 8 years</p>
-            <p>Where to grow your business as a photographer: site or social media?</p>
-            <button class="Register"></button>
-          </div>
-          <div class="item">
-            <img src="" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="home">
-        <div>
-          <div>
-            <h1>Our Clients</h1>
-            <p>We have been working with some Fortune 500+ clients</p>
-          </div>
-        </div>
-      </div>
-      <div class="item"></div>
+      <div class="item b"></div>
+      <div class="item c"></div>
     </main>
     <footer>
-      <div class="item"></div>
+      <div class="item f"></div>
     </footer>
   </div>
 </body>
+
 </html>
